[BDN-860] Add server-side pagination (#680)
