# internal/admin/openapi/openapi.yaml
@@ -596,45 +596,12 @@ paths:
       tags:
         - Line items
       parameters:
-        - name: user_id
-          in: query
-          description: "Filter by user ID"
-          required: false
-          schema:
-            type: integer
-            format: int64
-        - name: app_id
-          in: query
-          description: "Filter by app ID"
-          required: false
-          schema:
-            type: integer
-            format: int64
-        - name: ad_type
-          in: query
-          description: "Filter by ad type"
-          required: false
-          schema:
-            type: string
-        - name: account_id
-          in: query
-          description: "Filter by account ID"
-          required: false
-          schema:
-            type: integer
-            format: int64
-        - name: account_type
-          in: query
-          description: "Filter by account type"
-          required: false
-          schema:
-            type: string
-        - name: is_bidding
-          in: query
-          description: "Filter by bidding status"
-          required: false
-          schema:
-            type: boolean
+        - $ref: '#/components/parameters/userId'
+        - $ref: '#/components/parameters/appId'
+        - $ref: '#/components/parameters/adType'
+        - $ref: '#/components/parameters/accountId'
+        - $ref: '#/components/parameters/accountType'
+        - $ref: '#/components/parameters/isBidding'
       responses:
         '200':
           description: A list of line items
@@ -711,6 +678,32 @@ paths:
       responses:
         '204':
           description: Line item deleted successfully
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+  /api/v2/line_items:
+    get:
+      operationId: getLineItemsV2
+      summary: List line items
+      tags:
+        - Line items
+      parameters:
+        - $ref: '#/components/parameters/userId'
+        - $ref: '#/components/parameters/appId'
+        - $ref: '#/components/parameters/adType'
+        - $ref: '#/components/parameters/accountId'
+        - $ref: '#/components/parameters/accountType'
+        - $ref: '#/components/parameters/isBidding'
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+      responses:
+        '200':
+          description: A list of line items
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: './schemas/line-items-collection.schema.json'
         default:
           $ref: '#/components/responses/ErrorResponse'
   /api/segments:
@@ -1064,3 +1057,62 @@ components:
       description: 'An id of a resource'
       schema:
         $ref: './schemas/id.schema.json'
+    page:
+      name: page
+      in: query
+      required: false
+      description: 'Page number'
+      schema:
+        type: integer
+    limit:
+      name: limit
+      in: query
+      required: false
+      description: 'Number of items per page'
+      schema:
+        type: integer
+    userId:
+      name: user_id
+      in: query
+      required: false
+      description: 'Filter by user ID'
+      schema:
+        type: integer
+        format: int64
+    appId:
+      name: app_id
+      in: query
+      required: false
+      description: 'Filter by app ID'
+      schema:
+        type: integer
+        format: int64
+    adType:
+      name: ad_type
+      in: query
+      required: false
+      description: 'Filter by ad type'
+      schema:
+        type: string
+    accountId:
+      name: account_id
+      in: query
+      required: false
+      description: 'Filter by account ID'
+      schema:
+        type: integer
+        format: int64
+    accountType:
+      name: account_type
+      in: query
+      required: false
+      description: 'Filter by account type'
+      schema:
+        type: string
+    isBidding:
+      name: is_bidding
+      in: query
+      required: false
+      description: 'Filter by bidding status'
+      schema:
+        type: boolean
